[tool.poetry]
name = "litegpodder"
version = "0.1.0"
description = "Minimal gpodder-compatible server"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
